--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ body {
 }
 
 .secondary-color {
-  color: #263396;
+  color: #7EC8E3;
 }
 
 .light-color {
@@ -77,7 +77,7 @@ body {
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background-color: #EF3636;
+  background-color: #0000FF;
   text-align: center;
 }
 
@@ -314,12 +314,12 @@ body {
 
 .btn {
   background-color: transparent;
-  border-color: #C09578;
+  border-color: #7EC8E3;
 }
 
 .btn:hover {
-  background-color: #C09578;
-  border-color: #C09578;
+  background-color: #7EC8E3;
+  border-color: #7EC8E3;
 }
 
 /* BOTTOM BANNER */
@@ -397,7 +397,7 @@ body {
 }
 
 #gallery .image-container:hover {
-  border-color: #C09578;
+  border-color: #0000FF;
 }
 
 #insta1 {
@@ -464,7 +464,7 @@ body {
 }
 
 #footer-links-container li a:hover {
-  color: #C09578;
+  color: #263396;
 }
 
 #footer-center {
@@ -477,7 +477,7 @@ body {
 }
 
 #footer-center .store-phone {
-  color: #C09578;
+  color: #0000FF;
   font-weight: bold;
   font-size: 2rem;
   margin-top: -15px;
@@ -517,7 +517,7 @@ body {
 }
 
 #social-container i:hover {
-  color: #C09578;
+  color: #7EC8E3;
 }
 
 /* COPY */
