--- a/css/styles.css
+++ b/css/styles.css
@@ -401,27 +401,27 @@ body {
 }
 
 #insta1 {
-  background-image: url('../img/insta1.jpg');
+  background-image: url('../senhor.jpg');
 }
 
 #insta2 {
-  background-image: url('../img/insta2.jpg');
+  background-image: url('../fotobanner.png');
 }
 
 #insta3 {
-  background-image: url('../img/insta3.jpg');
+  background-image: url('../fotobanner1.jpg');
 }
 
 #insta4 {
-  background-image: url('../img/insta4.jpg');
+  background-image: url('../cadeira.jpg');
 }
 
 #insta5 {
-  background-image: url('../img/insta5.jpg');
+  background-image: url('../corda.jpg');
 }
 
 #insta6 {
-  background-image: url('../img/insta6.jpg');
+  background-image: url('../bluefit3.jpg');
 }
 
 /* FOOTER */
