--- a/css/styles.css
+++ b/css/styles.css
@@ -549,6 +549,50 @@ body {
   align-items: center;
   margin-left: 40%;
 }
+.favorite-btn {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  font-size: 1.5rem;
+  color: #ccc;
+  transition: color 0.3s;
+}
+
+.favorite-btn.active {
+  color: red; /* ou qualquer cor desejada para o coração ativo */
+}
+/* Estilos para a área de produtos favoritos */
+#favorites-area {
+  margin-top: 50px;
+}
+
+#favorites-list {
+  margin-top: 20px;
+}
+
+/* Estilos para o botão de favoritos */
+#favorite-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 1.5rem;
+  color: #FF5733; /* Cor do coração (substitua pela cor desejada) */
+  transition: color 0.3s ease-in-out;
+}
+
+#favorite-button.active {
+  color: red; /* Cor do coração quando ativo (substitua pela cor desejada) */
+}
+
+/* Estilos para os produtos favoritos */
+#favorites-list p {
+  font-size: 1.2rem;
+  margin: 10px 0;
+}
+
+/* Adicione outros estilos aqui conforme necessário */
+
 
 
 
