--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,17 @@
+@media screen and (max-width: 768px) {
+  /* Estilos para telas menores, como smartphones */
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  /* Estilos para tablets */
+}
 * {
   font-family: 'Montserrat', sans-serif;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 body {
